--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,13 @@
 steps:
-  - name: 'gcr.io/cloud-builders/npm'
-    args: ['install']
+  # Step 1: Build the project with official builder
+  - name: 'gcr.io/buildpacks/builder:v1'
+    args:
+      - 'build'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/elite-pilot-api:$COMMIT_SHA'
+      - '.'
 
-  - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'build']
-
+  # Step 2: Deploy to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
@@ -21,5 +24,6 @@ steps:
 images:
   - 'gcr.io/$PROJECT_ID/elite-pilot-api:$COMMIT_SHA'
 
+# Logging only in Cloud Logging
 options:
   logging: CLOUD_LOGGING_ONLY
