--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,25 @@
 steps:
-  # Step 1: Build the project with official buildpacks builder
-  - name: 'gcr.io/buildpacks/builder:v1'
+  # Step 1: Build Node.js project with official Google Cloud Buildpacks
+  - name: 'gcr.io/buildpacks/builder:google-22'
     args:
       - 'build'
       - '-t'
       - 'gcr.io/$PROJECT_ID/elite-pilot-api:$COMMIT_SHA'
       - '.'
+
+  # Step 2: Deploy to Cloud Run
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+      - 'run'
+      - 'deploy'
+      - 'elite-pilot-api'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/elite-pilot-api:$COMMIT_SHA'
+      - '--region'
+      - 'us-central1'
+      - '--platform'
+      - 'managed'
+      - '--allow-unauthenticated'
 
 images:
   - 'gcr.io/$PROJECT_ID/elite-pilot-api:$COMMIT_SHA'
